<?xml version="1.0"?>
<package format="3">
  <name>lidar_slam_2d</name>
  <version>0.1.0</version>
  <description>2D LiDAR graph based SLAM (loosely coupled) with a ROS-independent core</description>
  <maintainer email="ryu.yamamoto@tier4.jp">RyuYamamoto</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>eigen</depend>
  <depend>gtsam</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
