<?xml version="1.0"?>
<package format="3">
  <name>lidar_slam_2d</name>
  <version>0.1.0</version>
  <description>2D LiDAR graph based SLAM (loosely coupled) with a ROS-independent core</description>
  <maintainer email="rottertarmenation.y11.r18@gmail.com">RyuYamamoto</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>eigen</depend>
  <depend>gtsam</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
